# obcast

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml
.github/workflows/: attach-libfdk-ffmpeg.yml  build-libfdk-ffmpeg.yml  ci.yml  hello.yml
crates/obcast-client/: Cargo.toml
crates/obcast-client/src/: audio.rs  config.rs  encode.rs  inventory.rs  main.rs  shared.rs  sse.rs  uploader.rs
crates/obcast-client/src/gui/: app.rs  meter.rs  mod.rs
crates/obcast-proto/: Cargo.toml
crates/obcast-proto/src/: control.rs  lib.rs  loudness.rs  meter.rs  scheduler.rs  state.rs
crates/obcast-server/: Cargo.toml
crates/obcast-server/src/: api.rs  config.rs  debug.rs  ingest.rs  logs.rs  main.rs  origin.rs  playout.rs  shows.rs  store.rs  waveform.rs
docs/: getting-started.md  protocol.md
scripts/: build-libfdk-ffmpeg-windows.sh  build-libfdk-ffmpeg.ps1  build-libfdk-ffmpeg.sh
web/remote/: index.html  shows.html  stream.html
