[package]
name = "obcast-client"
version = "0.1.0"
edition = "2021"

[dependencies]
obcast-proto = { path = "../obcast-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync", "signal", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
eframe = { version = "0.35.0", default-features = false, features = ["glow", "default_fonts", "persistence", "wayland", "x11"] }
cpal = "0.18"
directories = "6.0.0"
toml = "1.1.3"
anyhow = "1.0.103"
