[package]
name = "obcast-client"
version = "0.1.0"
edition = "2021"

[dependencies]
obcast-proto = { path = "../obcast-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync", "signal", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
eframe = { version = "0.35.0", default-features = false, features = ["glow", "default_fonts", "persistence", "wayland", "x11"] }
cpal = "0.18"
directories = "6.0.0"
toml = "1.1.3"
anyhow = "1.0.103"

# Off by default so a plain `cargo build` never needs libjack/libpulse/
# libpipewire dev headers. Enable per-machine to expose more audio
# subsystems in the "Audio Subsystem" picker on Linux/BSD, e.g.
# `cargo build -p obcast-client --features jack,pulseaudio,pipewire`.
# `pipewire` talks to libpipewire directly (cpal's native PipeWire host,
# not a compatibility shim) — on a PipeWire desktop it's the one to prefer,
# since cpal's own platform default already picks it over PulseAudio/ALSA
# when compiled in. Still worth adding `jack` alongside it if the operator
# wants JACK's port-graph semantics (patching into other pro-audio JACK
# clients via `pipewire-jack`) rather than a plain sink/source — PipeWire's
# native cpal host doesn't expose that graph. `pulseaudio` is mainly for
# hosts that are actually PulseAudio (no PipeWire installed).
[features]
jack = ["cpal/jack"]
pulseaudio = ["cpal/pulseaudio"]
pipewire = ["cpal/pipewire"]
