[package]
name = "obcast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
obcast-proto = { path = "../obcast-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
futures = "0.3"
cpal = "0.18"
ringbuf = "0.5"
toml = "1.1.3"

# Off by default so a plain `cargo build` never needs libjack/libpulse/
# libpipewire dev headers. Enable per-machine to pick more audio subsystems
# for playout in `obcast-server.toml`, e.g.
# `cargo build -p obcast-server --features jack,pulseaudio,pipewire`.
# `pipewire` talks to libpipewire directly (cpal's native PipeWire host,
# not a compatibility shim) — on a PipeWire host it's the one to prefer,
# since cpal's own platform default already picks it over PulseAudio/ALSA
# when compiled in. Still worth adding `jack` alongside it if the operator
# wants JACK's port-graph semantics (patching into other pro-audio JACK
# clients via `pipewire-jack`) rather than a plain sink/source — PipeWire's
# native cpal host doesn't expose that graph. `pulseaudio` is mainly for
# hosts that are actually PulseAudio (no PipeWire installed).
[features]
jack = ["cpal/jack"]
pulseaudio = ["cpal/pulseaudio"]
pipewire = ["cpal/pipewire"]
