[package]
name = "obcast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
obcast-proto = { path = "../obcast-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
futures = "0.3"
cpal = "0.18"
ringbuf = "0.5"
toml = "1.1.3"

# WASAPI (Windows) and CoreAudio (macOS) are cpal's mandatory native hosts —
# same standing as ALSA on Linux — so they need no feature flag and just
# work out of the box for hardware playout; they're already what
# `cargo build` gives you with no features enabled at all on those platforms.
#
# Everything below is opt-in because it needs extra system dev headers (or,
# for ASIO, a proprietary SDK) that a plain `cargo build` shouldn't require:
# `cargo build -p obcast-server --features jack,pulseaudio,pipewire` (Linux/BSD)
# `cargo build -p obcast-server --features jack,asio` (Windows)
# `cargo build -p obcast-server --features jack` (macOS)
#
# - `pipewire` (Linux/BSD): talks to libpipewire directly (cpal's native
#   PipeWire host, not a compatibility shim) — on a PipeWire host it's the
#   one to prefer, since cpal's own platform default already picks it over
#   PulseAudio/ALSA when compiled in.
# - `jack` (Linux/BSD/macOS/Windows): JACK's port-graph semantics — patching
#   into other pro-audio JACK clients by name — rather than a plain
#   sink/source. On a PipeWire machine this reaches `pipewire-jack`; that's
#   additive to `pipewire` above, not a replacement, since the native
#   PipeWire host doesn't expose graph routing.
# - `pulseaudio` (Linux/BSD): for a host that's genuinely PulseAudio without
#   PipeWire (older/minimal distros) — redundant on a modern PipeWire host,
#   where `pipewire-pulse` is just a shim in front of the same server
#   `pipewire` already reaches directly.
# - `asio` (Windows only — inert everywhere else): Steinberg's ASIO, the
#   exclusive-mode low-latency backend most pro-audio interfaces on Windows
#   actually want for playout. Requires downloading the ASIO SDK yourself
#   (its license forbids redistributing it) and pointing `CPAL_ASIO_DIR` at
#   it before building — see cpal's README. Not needed if WASAPI's shared
#   mode is good enough for the interface driving the server's hardware out.
[features]
jack = ["cpal/jack"]
pulseaudio = ["cpal/pulseaudio"]
pipewire = ["cpal/pipewire"]
asio = ["cpal/asio"]
